# truth-of-fun

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml
alembic/: env.py
app/: __init__.py  main.py  worker.py
docs/: INTEGRATIONS.md  agent-execution-runbook.md  ai-agent-ui-prompts.md  api-contract-v1.md  architecture.md  frontend-architecture.md  operations.md
scripts/: capture_screenshots.mjs  export_digest.py  seed_demo.py  status.py
tests/: test_api_contract_v1.py  test_categories.py  test_concierge.py  test_data_pipeline_service.py  test_discovery_scoring.py  test_event_detail_api.py  test_export_digest.py  test_folder_invite_lifecycle.py  test_funcheap_sf.py  test_health_db.py  test_health_summary.py  test_ingestion_19hz.py  test_ingestion_base_retry.py  test_ingestion_contracts.py  test_ingestion_dothebay.py  test_ingestion_eddies_list.py  test_ingestion_eventbrite.py  test_ingestion_luma.py  test_ingestion_meetup.py  test_ingestion_minnesotastreet.py  test_ingestion_reddit.py  test_ingestion_sfstation.py  test_ingestion_ticketmaster.py  test_interest_persistence.py  test_internal_secrets_api.py  test_local_time_windows.py  test_pipeline_field_limits.py  test_redaction.py  test_request_logging.py  test_scraper_utils.py  test_secrets_store.py  test_security_internal_auth.py  test_social_membership.py  test_social_service.py  test_source_health_api.py  test_ticketmaster_sync_cursor.py  test_user_profile.py  test_worker.py  test_worker_lifecycle.py
(+116 files in other folders)
